# async_server

./: .gitignore  CMakeLists.txt  README.md  async.cpp  main.cpp
example/: CMakeLists.txt  header.hpp  interface.cpp  main.cpp
include/coro/: awaitable.hpp  coro_future.hpp  corofuture-inl.hpp  corofuture.hpp  coroutine.hpp  forward.hpp  promise-inl.hpp  promise.hpp  runtime.hpp
include/http/: message.hpp
include/io/: io_awaitable.hpp  io_awaitable_base.hpp  io_object.hpp  pipe.hpp  pollable_object.hpp  read.hpp  read_write_awaitable.hpp  socket.hpp  well_known_structs.hpp  write.hpp
include/net/: accept_connect_awiatable.hpp  socket.hpp
include/net/address/: ip.hpp
include/polling/: epoll.hpp
include/socket/: accept.hpp  address.hpp  connect.hpp  resolve.hpp  sock_types.hpp  socket.hpp  socket_descr.hpp
include/thread/: pool.hpp  wait_group.hpp
include/thread_pool/: pool.hpp
include/util/: list.hpp  queue.hpp  result.hpp  task.hpp
src/: CMakeLists.txt
src/ap/: eventfd.cpp  ioobject.cpp  pipe.cpp
src/coro/: awaitable.cpp  coro.cpp  eventloop.cpp  future.cpp  promise.cpp  runtime.cpp
src/coroutine/: io_awaitable.hpp
src/http/: message.cpp
src/io/: CMakeLists.txt  base.hpp  epoll.cpp  io_awaitable.cpp  io_awaitable_base.cpp  io_base.hpp  io_object.cpp  io_reader.cpp  io_reader.hpp  ioobject.cpp  operation.cpp  pipe.cpp  pollable_object.cpp  polling.cpp  polling.hpp  polling_base.hpp  read.cpp  read_write_awaitable.cpp  socket.cpp  socket.hpp  uring.cpp  well_known_structs.cpp  write.cpp
src/net/: accept.cpp  accept_connect_awaitable.cpp  connect.cpp  helpers.hpp  socket.cpp
src/net/address/: ip.cpp
src/polling/: epoll.cpp
src/socket/: accept.cpp  address.cpp  connect.cpp  resolve.cpp  sock_types.cpp  socket.cpp  socket_descr.cpp
src/sync/: optional.cpp  queue.cpp  threadpool.cpp  waitgroup.cpp
src/thread/: pool.cpp  wait_group.cpp
src/thread_pool/: CMakeLists.txt  pool.cpp  pool.hpp
src/util/: result.cpp
tests/: CMakeLists.txt  coro.cpp  epoll.cpp  eventfd.cpp  ioprovider.cpp  iouring.cpp  operation.cpp  optional.cpp  pipe.cpp  queue.cpp  test_address.cpp  test_coro.cpp  test_http.cpp  test_io.cpp  test_polling.cpp  test_resolve.cpp  test_socket.cpp  test_thread.cpp  test_thread_pool.cpp  test_utils.cpp  threadpool.cpp  utils.hpp  waitgroup.cpp
